# Automacao_CAC-py

./: README.md  pyproject.toml
main/: pyproject.toml
main/app/: app.py
main/resources/: erros.xlsx  plan.xlsx
