[tool.poetry]
name = "automacao-cac"
version = "0.1.0"
description = ""
authors = ["Rodger <rvidaldias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.27.1"
selenium-stealth = "^1.0.6"
webdriver-manager = "^4.0.2"
requests = "^2.32.3"
reportlab = "^4.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
